<resources>
    <string name="app_name">简影讯</string>
    <string name="app_slogan">简约精彩影讯</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_theme">主题</string>
    <string name="navigation_settings">设置</string>
    <string name="navigation_share">分享</string>
    <string name="navigation_evaluate">评价</string>
    <string name="navigation_about">关于</string>
    <string name="has_released">正在上映</string>
    <string name="going_to_release">即将上映</string>
    <string name="title_activity_about">关于</string>
    <string name="day_night_mode">日夜模式</string>
    <string name="day_mode">日间模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="primary_color">主&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;色</string>
    <string name="accent_color">配&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;色</string>
    <string name="data_loading">正在加载</string>
    <string name="has_no_data">暂无数据</string>
    <string name="hour_min">时&#160;&#160;:&#160;&#160;分</string>
    <string name="format_hour_min">%1$s&#160;&#160;:&#160;&#160;%2$s</string>
    <string name="format_hour_min2">%1$s:%2$s</string>
    <string name="grade">评&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;分</string>
    <string name="release_date">上映日期</string>
    <string name="type">类&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型</string>
    <string name="director">导&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;演</string>
    <string name="starring">主&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;演</string>
    <string name="story_brief">剧情简介</string>
    <string name="release_info">上映信息</string>
    <string name="location_default">位置</string>
    <string name="permission_title">提示</string>
    <string name="permission_msg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="settings">设置</string>
    <string name="cancel">取消</string>
    <string name="revoke">撤销</string>
    <string name="hint_located_city">定位成功，你所在的地区是：%s</string>
    <string name="confirm">确定</string>
    <string name="locate_again">重新定位</string>
    <string name="welcome">谢天谢地你来了</string>
    <string name="contact_me">联系我</string>
    <string name="open_source_address">项目已开源，喜欢就star一个哦</string>
    <string name="thanks">致谢</string>
    <string name="welcome_detail">我是一枚展示所在城市热映电影资讯和票房的小小应用，万分荣幸入驻你的手机。我简单但颜值高，善变（多色主题自由搭配）却体贴（夜间模式护眼），总有一种性格与你的气质相配。简约，优雅，精彩，即看即走，全都来自处女座作者的“斤斤计较”。希望你喜欢。o(*￣︶￣*)o</string>
    <string name="gmail_address">Chauvet910@gmail.com</string>
    <string name="github_page">https://github.com/woxingxiao/GracefulMovies</string>
    <string name="hint_clipboard">%1$s“%2$s”已复制到粘贴板</string>
    <string name="open_source_permission">开源许可</string>
    <string name="license"><![CDATA[<u>LICENSE</u>]]></string>
    <string name="thanks_list">强大的开源社区\n聚合数据提供影讯数据支持\n易源数据提供票房数据支持\niconfont.cn的海量图标资源</string>
    <string name="share_out_description">"简影讯，简约多彩影讯。速查热门电影影讯、评分和票房，即看即走。下载地址：https://fir.im/jyx"</string>
    <string name="hint_query_by_upper_city">使用【%1$s】查询无数据，使用其上级行政区【%2$s】查询？</string>
    <string name="questionnaire_url">https://gdgdocs.org/forms/d/e/1FAIpQLSdQF1HvXnvx_vki00RUTKR3PP0-ghTpYoxjfZCZWs5IAH41Pw/viewform</string>
    <string name="hint_auto_day_night_disabled">自动切换日夜模式已关闭，到“设置”中可再开启</string>
    <string name="box_office">票房</string>
    <string name="box_office_day">单日</string>
    <string name="box_office_weekend">周末</string>
    <string name="box_office_week">单周</string>
    <string name="box_office_month">单月</string>
    <string name="hint_box_office_day">单日票房（万）</string>
    <string name="hint_box_office_sum">累计票房（万）</string>
    <string name="hint_released_days">上映天数</string>
    <string name="hint_box_office_rate">环比变化</string>
    <string name="hint_average_price">平均票价</string>
    <string name="hint_wom_index">口碑指数</string>
    <string name="hint_box_office_weekend">周末票房（万）</string>
    <string name="hint_box_office_week">单周票房（万）</string>
    <string name="hint_box_office_month">单月票房（万）</string>
    <string name="hint_playing_days_in_the_month">月内天数</string>
    <string name="hint_playing_rate_in_the_month">月内占比</string>
    <string name="hint_box_office_attention">票房数据由第三方提供，提示：\n1. 单日票房数据统计实时性较高，其余仅供参考；\n2. 单月票房排名按照月票房成绩，而非累计票房。</string>
    <string name="hint_input_city_manually">定位无力？我要手动输入</string>
    <string name="hint_distract_input">如：成都</string>
    <string name="hint_distract">市（区/县）</string>
    <string name="hint_distract_input_empty">输入的地区名称为空</string>
    <string name="search">搜索</string>
    <string name="hint_movie_search">精彩一搜即现</string>
    <string name="movie_type">类型</string>
    <string name="movie_score">评分</string>
    <string name="movie_director">导演</string>
    <string name="movie_cast">主演</string>

    <string name="key_first_time">key_first_time</string>
    <string name="key_auto_day_night">key_auto_day_night</string>
    <string name="key_day_mode_time">key_day_mode_time</string>
    <string name="key_night_mode_time">key_night_mode_time</string>
    <string name="key_upper_city">key_upper_city</string>
    <string name="key_theme">key_theme</string>
    <string name="key_cache">key_cache</string>
    <string name="key_city">key_city</string>
    <string name="key_feedback">key_feedback</string>
    <string name="key_inputted_city">key_inputted_city</string>

    <string name="action_locate_succeed">key_locate_succeed</string>
    <string name="param_is_upper_city">param_is_upper_city</string>

</resources>
