<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        android:title="基本设置">
        <SwitchPreference
            android:checked="true"
            android:defaultValue="true"
            android:key="@string/key_auto_day_night"
            android:order="0"
            android:title="自动切换日夜模式"/>
        <Preference
            android:defaultValue="8"
            android:key="@string/key_day_mode_time"
            android:order="1"
            android:summary="08:00"
            android:title="日间模式开始时间"/>
        <Preference
            android:defaultValue="18"
            android:key="@string/key_night_mode_time"
            android:order="2"
            android:summary="18:00"
            android:title="夜间模式开始时间"/>
        <Preference
            android:key="@string/key_theme"
            android:order="3"
            android:title="主题"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="其他">
        <Preference
            android:key="@string/key_cache"
            android:order="4"
            android:title="清除缓存"
            tools:summary="16KB"/>
    </PreferenceCategory>

</PreferenceScreen>