<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="@dimen/space2x">

    <TextView
        android:id="@+id/dialog_loc_msg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/text_size_16sp"
        tools:text="@string/hint_located_city"/>

    <TextView
        android:id="@+id/dialog_loc_input_manually_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space"
        android:text="@string/hint_input_city_manually"
        android:textSize="@dimen/text_size_12sp"/>

    <LinearLayout
        android:id="@+id/dialog_loc_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/dialog_loc_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_distract_input"
            android:inputType="text"
            android:maxLength="10"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space"
            android:text="@string/hint_distract"/>
    </LinearLayout>
</LinearLayout>