<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space2x"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.xw.project.gracefulmovies.view.activity.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade"/>

        <LinearLayout
            android:id="@+id/detail_rating_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space2x"
            android:layout_marginTop="@dimen/space"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:id="@+id/detail_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srb_drawBorderEnabled="false"
                app:srb_fillColor="@color/colorAccent"
                app:srb_isIndicator="true"
                app:srb_starBackgroundColor="@android:color/darker_gray"
                app:srb_starSize="25dp"
                app:srb_starsSeparation="@dimen/four_dp"/>

            <TextView
                android:id="@+id/detail_rating_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space2x"/>
        </LinearLayout>

        <TextView
            android:id="@+id/detail_release_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_info"/>

        <TextView
            android:id="@+id/detail_release_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/text_size_18sp"
            tools:text="xxx"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space2x"
            android:text="@string/type"/>

        <TextView
            android:id="@+id/detail_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/text_size_18sp"
            tools:text="爱情，动作"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space2x"
            android:text="@string/director"/>

        <TextView
            android:id="@+id/detail_director_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/text_size_18sp"
            tools:text="李安"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space2x"
            android:text="@string/starring"/>

        <TextView
            android:id="@+id/detail_starring_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/text_size_18sp"
            tools:text="xxx, xxx"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space2x"
            android:text="@string/story_brief"/>

        <TextView
            android:id="@+id/detail_story_brief_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/text_size_16sp"
            tools:text="xxx, xxx"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
