<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/nest_scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activity.AboutActivity"
    tools:showIn="@layout/fragment_side">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space2x">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/four_dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/day_night_mode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_night_mode"
                android:textColor="?android:attr/textColorPrimary"/>

            <com.yalantis.starwarsdemo.widget.BackgroundDrawableSwitchCompat
                android:id="@+id/day_night_switch"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space4x"
                app:switchMinWidth="60dp"
                app:thumbTint="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/primary_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primary_color"
                android:textColor="?android:attr/textColorPrimary"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/primary_color_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space4x"
                android:padding="@dimen/space"
                app:srcCompat="@drawable/svg_ic_suit"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/accent_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/four_dp"
                android:text="@string/accent_color"
                android:textColor="?android:attr/textColorPrimary"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/accent_color_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space4x"
                android:padding="@dimen/space"
                app:srcCompat="@drawable/svg_ic_tie"/>

        </LinearLayout>

        <com.xw.project.gracefulmovies.view.widget.QuoteTextView
            android:id="@+id/quote_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space2x"
            android:padding="@dimen/space"
            tools:text="@string/app_slogan"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
